# solidlibs

./: pyproject.toml
solidlibs/django_addons/middleware/: proxy404.py  template.py
solidlibs/django_addons/static/css/: sudoSlider.css
